# mein

./: Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml
src/: app.rs  bin_cargo.rs  bin_standalone.rs  cli.rs  main.rs
src/actions/: llvm_coverage_link.rs  mod.rs  notes_at_future_me.rs
src/templates/: NOTES_AT_FUTURE_ME.md
