[package]
name = "mein"
version = "0.0.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Mein Schweizer Taschenmesser"
documentation = "https://docs.rs/mein"
repository = "https://github.com/DariuszDepta/mein.git"
keywords = ["Mein", "Schweizer", "Taschenmesser"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
edition = "2024"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
antex = "0.0.8"
