[package]
name = "mein"
version = "0.0.11"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Mein Schweizer Taschenmesser"
documentation = "https://docs.rs/mein"
repository = "https://github.com/DariuszDepta/mein.git"
keywords = ["Mein", "Schweizer", "Taschenmesser"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "/NOTES_AT_FUTURE_ME.md"
]

[[bin]]
name = "my"
path = "src/bin_standalone.rs"

[[bin]]
name = "cargo-my"
path = "src/bin_cargo.rs"

[dependencies]
antex = "0.0.8"
